created main page HTML

--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NewsForYou</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="src/index.js"></script>
 </head>
 <body>
-    </section>
+    <header>
+        <section class="logoSection">
+            <h1>NewsForYou</h1>
+        </section>
+
+        <section class="editorialBoard">
+            <article>Edit Article</article>
+            <article>Edit Article</article>
+            <article>Edit Article</article>
+        </section>
+    </header>
+
+    <main>
+        <section class="filterFeed">
+            <form>
+                <label for="search">Search:
+                </label>
+                <input type="text" id="search">
+            </form>
+            <h2>Search by Category:</h2>
+            <form>
+                <label for="news">News</label>
+                <input type="checkbox" id= "news">
+                <label for="sports">Sports</label>
+                <input type="checkbox" id= "sports">
+                <label for="culture">Culture</label>
+                <input type="checkbox" id= "culture">
+                <label for="opinion">Opinion</label>
+                <input type="checkbox" id= "opinion">
+            </form>
+        </section>
+    
+        <section class="mainContent">
+            <div>Content</div>
+            <div>Content</div>
+            <div>Content</div>
+            <div>Content</div>
+            <div>Content</div>
+            <div>Content</div>
+        </section>
+    </main>
+    
+
 </body>
 </html>
