--- a/index.html
+++ b/index.html
@@ -42,12 +42,61 @@
         </section>
     
         <section class="mainContent">
-            <div>Content</div>
-            <div>Content</div>
-            <div>Content</div>
-            <div>Content</div>
-            <div>Content</div>
-            <div>Content</div>
+            <article>
+                <div class="articleContent">
+                    <h2>Article Title</h2>
+                    <h3>Author, date, time</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                </div>
+                <div class="articleURL">
+                    <a href="">Navigate to article page</a>
+                </div>
+                <hr>
+            </article>
+            <article>
+                <div class="articleContent">
+                    <h2>Article Title</h2>
+                    <h3>Author, date, time</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                </div>
+                <div class="articleURL">
+                    <a href="">Navigate to article page</a>
+                </div>
+                <hr>
+            </article>
+            <article>
+                <div class="articleContent">
+                    <h2>Article Title</h2>
+                    <h3>Author, date, time</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                </div>
+                <div class="articleURL">
+                    <a href="">Navigate to article page</a>
+                </div>
+                <hr>
+            </article>
+            <article>
+                <div class="articleContent">
+                    <h2>Article Title</h2>
+                    <h3>Author, date, time</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                </div>
+                <div class="articleURL">
+                    <a href="">Navigate to article page</a>
+                </div>
+                <hr>
+            </article>
+            <article>
+                <div class="articleContent">
+                    <h2>Article Title</h2>
+                    <h3>Author, date, time</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                </div>
+                <div class="articleURL">
+                    <a href="">Navigate to article page</a>
+                </div>
+                <hr>
+            </article>
         </section>
     </main>
     
