--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </section>
     
         <section class="mainContent">
-            <article>
+        <!-- <div class="feedContainer">
+                 <article class="article">
                 <div class="articleContent">
                     <h2>Article Title</h2>
                     <h3>Author, date, time</h3>
@@ -53,50 +54,30 @@
                 </div>
                 <hr>
             </article>
-            <article>
-                <div class="articleContent">
-                    <h2>Article Title</h2>
-                    <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
-                </div>
-                <div class="articleURL">
-                    <a href="">Navigate to article page</a>
-                </div>
-                <hr>
-            </article>
-            <article>
-                <div class="articleContent">
-                    <h2>Article Title</h2>
-                    <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
-                </div>
-                <div class="articleURL">
-                    <a href="">Navigate to article page</a>
-                </div>
-                <hr>
-            </article>
-            <article>
-                <div class="articleContent">
-                    <h2>Article Title</h2>
-                    <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
-                </div>
-                <div class="articleURL">
-                    <a href="">Navigate to article page</a>
-                </div>
-                <hr>
-            </article>
-            <article>
-                <div class="articleContent">
-                    <h2>Article Title</h2>
-                    <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
-                </div>
-                <div class="articleURL">
-                    <a href="">Navigate to article page</a>
-                </div>
-                <hr>
-            </article>
+            </div> -->
+            <div class="editingSectionContainer">
+                <article class="editingSection">
+                    <h2>Edit</h2>
+                    <form>
+                        <label for="title">Title:
+                            <input type="text" id="headline">
+                        </label>
+                        <label for="tagline">Tagline:
+                            <input type="text" id="tagline">
+                        </label>
+                        <label for="content">Article Content
+                            <input type="text" id="content">
+                        </label>
+                        <label for="pillars">Pillars:</label>
+                        <select name="pillars" id="pillars">
+                            <option value="news">News</option>
+                            <option value="sports">Sports</option>
+                            <option value="culture">Culture</option>
+                            <option value="opinion">Opinion</option>
+                        </select>
+                    </form>
+                </article>
+            </div>
         </section>
     </main>
     
