Started editorial board

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NewsForYou</title>
     <link rel="stylesheet" href="styles/style.css">
-    <script src="src/index.js"></script>
+    <script defer src="src/index.js"></script>
 </head>
+
 <body>
     <header>
         <section class="logoSection">
@@ -15,14 +17,23 @@
         </section>
 
         <section class="editorialBoard">
-            <article>Edit Article</article>
-            <article>Edit Article</article>
-            <article>Edit Article</article>
+            <div class=title>
+                <h2> Editoral Board</h2>
+            </div>
+            <div class="edit-tiles">
+                <div class="edit-tile">
+                    <article>Edit Article</article>
+                    <button class="edit-tile-btn"> EDIT</button>
+                    <button class="delete-tile-btn"> DELETE</button>
+                </div>
+                <article>Edit Article</article>
+                <article>Edit Article</article>
+            </div>
         </section>
     </header>
 
     <main>
-        <section class="filterFeed">
+        <section class=" filterFeed">
             <form>
                 <label for="search">Search:
                 </label>
@@ -31,22 +42,24 @@
             <h2>Search by Category:</h2>
             <form>
                 <label for="news">News</label>
-                <input type="checkbox" id= "news">
+                <input type="checkbox" id="news">
                 <label for="sports">Sports</label>
-                <input type="checkbox" id= "sports">
+                <input type="checkbox" id="sports">
                 <label for="culture">Culture</label>
-                <input type="checkbox" id= "culture">
+                <input type="checkbox" id="culture">
                 <label for="opinion">Opinion</label>
-                <input type="checkbox" id= "opinion">
+                <input type="checkbox" id="opinion">
             </form>
         </section>
-    
+
         <section class="mainContent">
             <article>
                 <div class="articleContent">
                     <h2>Article Title</h2>
                     <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam
+                        veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente
+                        animi ipsam, in facere mollitia explicabo. </p>
                 </div>
                 <div class="articleURL">
                     <a href="">Navigate to article page</a>
@@ -57,7 +70,9 @@
                 <div class="articleContent">
                     <h2>Article Title</h2>
                     <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam
+                        veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente
+                        animi ipsam, in facere mollitia explicabo. </p>
                 </div>
                 <div class="articleURL">
                     <a href="">Navigate to article page</a>
@@ -68,7 +83,9 @@
                 <div class="articleContent">
                     <h2>Article Title</h2>
                     <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam
+                        veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente
+                        animi ipsam, in facere mollitia explicabo. </p>
                 </div>
                 <div class="articleURL">
                     <a href="">Navigate to article page</a>
@@ -79,7 +96,9 @@
                 <div class="articleContent">
                     <h2>Article Title</h2>
                     <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam
+                        veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente
+                        animi ipsam, in facere mollitia explicabo. </p>
                 </div>
                 <div class="articleURL">
                     <a href="">Navigate to article page</a>
@@ -90,7 +109,9 @@
                 <div class="articleContent">
                     <h2>Article Title</h2>
                     <h3>Author, date, time</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente animi ipsam, in facere mollitia explicabo. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolor necessitatibus quam
+                        veniam error, assumenda soluta, nihil incidunt ipsum impedit consequuntur. Quam ipsum sapiente
+                        animi ipsam, in facere mollitia explicabo. </p>
                 </div>
                 <div class="articleURL">
                     <a href="">Navigate to article page</a>
@@ -99,7 +120,8 @@
             </article>
         </section>
     </main>
-    
+
 
 </body>
+
 </html>
