--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </section>
     
         <section class="mainContent">
-        <!-- <div class="feedContainer">
-                 <article class="article">
+        <div class="feedContainer">
+                <article class="article">
                 <div class="articleContent">
                     <h2>Article Title</h2>
                     <h3>Author, date, time</h3>
@@ -54,30 +54,7 @@
                 </div>
                 <hr>
             </article>
-            </div> -->
-            <div class="editingSectionContainer">
-                <article class="editingSection">
-                    <h2>Edit</h2>
-                    <form>
-                        <label for="title">Title:
-                            <input type="text" id="headline">
-                        </label>
-                        <label for="tagline">Tagline:
-                            <input type="text" id="tagline">
-                        </label>
-                        <label for="content">Article Content
-                            <input type="text" id="content">
-                        </label>
-                        <label for="pillars">Pillars:</label>
-                        <select name="pillars" id="pillars">
-                            <option value="news">News</option>
-                            <option value="sports">Sports</option>
-                            <option value="culture">Culture</option>
-                            <option value="opinion">Opinion</option>
-                        </select>
-                    </form>
-                </article>
-            </div>
+        </div>
         </section>
     </main>
     
