--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header>
 		<section class="logoSection">
 			<h1>NewsForYou</h1>
-			<div class="logoContainer">
+			<button class="logoContainer">
 				<svg version="1.1" id="newsLogo" xmlns="http://www.w3.org/2000/svg"
 					xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
 					style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -119,7 +119,7 @@
 					<g>
 					</g>
 				</svg>
-			</div>
+			</button>
 		</section>
 
 		<section class="editorialBoard">
